# agdaup

./: Cargo.toml  docker-compose.yml
.github/workflows/: build.yml
installers/: install.sh
src/: get_latest_release_info.rs  main.rs
