[package]
name = "agdaup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["derive"] }
dirs = "5.0.1"
futures = "0.3.31"
manic = "0.8.1"
phf = { version = "0.11.2", features = ["macros"] }
reqwest = { version = "0.12.9", features = ["json", "stream"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
zip-extract = { version = "0.2.1", features = ["bzip2", "chrono", "deflate", "deflate-flate2", "deflate-miniz", "deflate-zlib"] }
